--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/phpunit-watcher",
+    "name": "amacrobert/phpunit-watcher",
     "description": "Automatically rerun PHPUnit tests when source code changes",
     "keywords": [
         "spatie",
